@@ -137,6 +137,13 @@
 					<include>OpenClose_Left</include>
 					<visible>!String.StartsWith(Player.FolderPath,http)</visible>
 				</control>
+				<control type="group">
+					<left>205</left>
+					<top>69</top>
+					<include condition="Skin.HasSetting(circle_rating) | Skin.HasSetting(circle_userrating)">VideoPlayerRatingCircle</include>
+					<include>OpenClose_Left</include>
+					<visible>!String.StartsWith(Player.FolderPath,http)</visible>
+				</control>
 				<control type="image">
 					<depth>DepthOSD+</depth>
 					<left>10</left>
